Move aggregate measurements endpoint.
